# NoeticEidos

./: CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: applied-mathematician.md  resonance-ontologist.md  theoretical-mathematician.md
.claude/skills/noetic-mathematician/: SKILL.md  applied.md  explorer.md  resonance.md  theoretical.md
.github/workflows/: ci.yml
docs/: CLAUDE.md  usage_cookbook.md
docs/mathematician/: algebra.md  dynamics.md  geometry.md  graphs.md  solvers.md  stats.md  topology.md  topology_atlas.md  topology_module.md  validation_framework.md
docs/resonance_ontologist/: 00_INDEX.md  00_README.md  01_orbital_resonances.md  02_spectral_signatures.md  03-07_mathematics_consolidated.md  09_notation_reference.md  INDEX.md  MATHEMATICS_COMPLETE.md  QUICKSTART.md
examples/: 01_basic_dual_transport.py  02_manifold_analysis.py  03_topology_geodesics.py  04_full_pipeline.py  05_validation_demo.py  06_fisher_rao_pipeline.py  README.md
notebooks/: 00_getting_started.ipynb  geometric_ml_cookbook.ipynb
src/: __init__.py  _version.py
src/algebra/: __init__.py  additive.py  mellin.py  multiplicative.py
src/dynamics/: __init__.py  cg_dynamics.py  diffusion.py  dual_kernel.py  fr_flows.py  projected.py
src/geometry/: __init__.py  fr_pullback.py  projection.py  submersion.py
src/graphs/: __init__.py  knn.py  laplacian.py
src/solvers/: __init__.py  cg.py  lanczos.py  preconditioners.py  utils.py
src/stats/: __init__.py  balance.py  separability.py  spectra.py  stability.py
src/topology/: __init__.py  atlas.py  coords.py  geodesic.py  metric.py  validation.py
src/validation/: __init__.py  mathematical.py  numerical.py  performance.py  reproducibility.py  statistical.py
tests/: __init__.py  test_algebra.py  test_dynamics.py  test_geometry.py  test_graphs.py  test_solvers.py  test_stats.py  test_topology_coords.py  test_topology_geodesic.py  test_topology_metric.py  test_topology_validation.py  test_validation.py
