[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "noeticeidos"
description = "Geometric ML Framework - Unifying dual transports and topological analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sar Hamam"},
]
keywords = [
    "geometric-ml",
    "machine-learning",
    "geometry",
    "topology",
    "spectral-analysis",
    "dual-transport",
    "manifold-learning",
    "graph-theory",
    "laplacian",
    "mellin-transform",
    "fisher-rao"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.6.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.3.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "ruff>=0.0.200",
    "mypy>=0.800",
    "pre-commit>=2.15.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipywidgets>=7.6.0",
    "seaborn>=0.11.0",
]
full = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "ruff>=0.0.200",
    "mypy>=0.800",
    "pre-commit>=2.15.0",
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipywidgets>=7.6.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/sarhamam/noeticeidos"
Documentation = "https://github.com/sarhamam/noeticeidos/tree/main/docs"
Repository = "https://github.com/sarhamam/noeticeidos"
Issues = "https://github.com/sarhamam/noeticeidos/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["configs/*.yaml", "notebooks/*.ipynb", "examples/*.py", "docs/*.md"]

[tool.setuptools_scm]
write_to = "src/_version.py"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "E722",  # bare except (common in research code fallbacks)
    "E741",  # ambiguous variable name (I for identity matrix is standard)
    "B008",  # do not perform function calls in argument defaults
    "B023",  # loop variable binding (intentional closures in research code)
    "B904",  # raise from pattern (not critical)
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["B011"]      # assert False warnings in tests
"src/validation/reproducibility.py" = ["F401"]  # torch import check

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow for research code flexibility
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]